High Performance IO with Virtual Threads